// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Transfer rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="g-transfer g-transfer-rtl css-var-root"
>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-checkbox-rtl g-checkbox-wrapper-disabled g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target g-checkbox-disabled"
        >
          <input
            class="g-checkbox-input"
            disabled=""
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger g-dropdown-rtl"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        0
        item
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <div
        class="g-transfer-list-body-not-found"
      >
        <div
          class="css-var-root g-empty g-empty-normal g-empty-rtl g-empty-small"
        >
          <div
            class="g-empty-image"
          >
            <svg
              height="41"
              viewBox="0 0 64 41"
              width="64"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                No data
              </title>
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(0 1)"
              >
                <ellipse
                  cx="32"
                  cy="33"
                  fill="#f5f5f5"
                  rx="32"
                  ry="7"
                />
                <g
                  fill-rule="nonzero"
                  stroke="#d9d9d9"
                >
                  <path
                    d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                  />
                  <path
                    d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                    fill="#fafafa"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="g-empty-description"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-transfer-actions"
  >
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only g-btn-rtl"
      disabled=""
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="left"
          class="gicon gicon-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only g-btn-rtl"
      disabled=""
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="right"
          class="gicon gicon-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-checkbox-rtl g-checkbox-wrapper-disabled g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target g-checkbox-disabled"
        >
          <input
            class="g-checkbox-input"
            disabled=""
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger g-dropdown-rtl"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        0
        item
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <div
        class="g-transfer-list-body-not-found"
      >
        <div
          class="css-var-root g-empty g-empty-normal g-empty-rtl g-empty-small"
        >
          <div
            class="g-empty-image"
          >
            <svg
              height="41"
              viewBox="0 0 64 41"
              width="64"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                No data
              </title>
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(0 1)"
              >
                <ellipse
                  cx="32"
                  cy="33"
                  fill="#f5f5f5"
                  rx="32"
                  ry="7"
                />
                <g
                  fill-rule="nonzero"
                  stroke="#d9d9d9"
                >
                  <path
                    d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                  />
                  <path
                    d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                    fill="#fafafa"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="g-empty-description"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Transfer should render correctly 1`] = `
<div
  class="g-transfer css-var-root"
>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-checkbox-wrapper-checked g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target g-checkbox-checked"
        >
          <input
            checked=""
            class="g-checkbox-input"
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        1/2
        items
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <ul
        class="g-transfer-list-content"
      >
        <li
          class="g-transfer-list-content-item g-transfer-list-content-item-checked"
        >
          <label
            class="g-checkbox-wrapper g-checkbox-wrapper-checked g-transfer-list-checkbox css-var-root g-checkbox-css-var"
          >
            <span
              class="g-checkbox g-wave-target g-checkbox-checked"
            >
              <input
                checked=""
                class="g-checkbox-input"
                type="checkbox"
              />
            </span>
          </label>
          <span
            class="g-transfer-list-content-item-text"
          />
        </li>
        <li
          class="g-transfer-list-content-item g-transfer-list-content-item-disabled"
        >
          <label
            class="g-checkbox-wrapper g-checkbox-wrapper-disabled g-transfer-list-checkbox css-var-root g-checkbox-css-var"
          >
            <span
              class="g-checkbox g-wave-target g-checkbox-disabled"
            >
              <input
                class="g-checkbox-input"
                disabled=""
                type="checkbox"
              />
            </span>
          </label>
          <span
            class="g-transfer-list-content-item-text"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    class="g-transfer-actions"
  >
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only"
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="right"
          class="gicon gicon-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="left"
          class="gicon gicon-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        1
        item
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <ul
        class="g-transfer-list-content"
      >
        <li
          class="g-transfer-list-content-item"
        >
          <label
            class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
          >
            <span
              class="g-checkbox g-wave-target"
            >
              <input
                class="g-checkbox-input"
                type="checkbox"
              />
            </span>
          </label>
          <span
            class="g-transfer-list-content-item-text"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Transfer should show sorted targetKey 1`] = `
<div
  class="g-transfer css-var-root"
>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        1
        item
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <ul
        class="g-transfer-list-content"
      >
        <li
          class="g-transfer-list-content-item"
          title="a"
        >
          <label
            class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
          >
            <span
              class="g-checkbox g-wave-target"
            >
              <input
                class="g-checkbox-input"
                type="checkbox"
              />
            </span>
          </label>
          <span
            class="g-transfer-list-content-item-text"
          >
            a
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="g-transfer-actions"
  >
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="right"
          class="gicon gicon-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="left"
          class="gicon gicon-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        2
        items
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <ul
        class="g-transfer-list-content"
      >
        <li
          class="g-transfer-list-content-item"
          title="c"
        >
          <label
            class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
          >
            <span
              class="g-checkbox g-wave-target"
            >
              <input
                class="g-checkbox-input"
                type="checkbox"
              />
            </span>
          </label>
          <span
            class="g-transfer-list-content-item-text"
          >
            c
          </span>
        </li>
        <li
          class="g-transfer-list-content-item"
          title="b"
        >
          <label
            class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
          >
            <span
              class="g-checkbox g-wave-target"
            >
              <input
                class="g-checkbox-input"
                type="checkbox"
              />
            </span>
          </label>
          <span
            class="g-transfer-list-content-item-text"
          >
            b
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Transfer should support render value and label in item 1`] = `
<div
  class="g-transfer css-var-root"
>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        1
        item
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <ul
        class="g-transfer-list-content"
      >
        <li
          class="g-transfer-list-content-item"
          title="title value"
        >
          <label
            class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
          >
            <span
              class="g-checkbox g-wave-target"
            >
              <input
                class="g-checkbox-input"
                type="checkbox"
              />
            </span>
          </label>
          <span
            class="g-transfer-list-content-item-text"
          >
            label
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="g-transfer-actions"
  >
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="right"
          class="gicon gicon-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="left"
          class="gicon gicon-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-checkbox-wrapper-disabled g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target g-checkbox-disabled"
        >
          <input
            class="g-checkbox-input"
            disabled=""
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        0
        item
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <div
        class="g-transfer-list-body-not-found"
      >
        <div
          class="css-var-root g-empty g-empty-normal g-empty-small"
        >
          <div
            class="g-empty-image"
          >
            <svg
              height="41"
              viewBox="0 0 64 41"
              width="64"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                No data
              </title>
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(0 1)"
              >
                <ellipse
                  cx="32"
                  cy="33"
                  fill="#f5f5f5"
                  rx="32"
                  ry="7"
                />
                <g
                  fill-rule="nonzero"
                  stroke="#d9d9d9"
                >
                  <path
                    d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                  />
                  <path
                    d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                    fill="#fafafa"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="g-empty-description"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`immutable data dataSource is frozen 1`] = `
<div
  class="g-transfer css-var-root"
>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target"
        >
          <input
            class="g-checkbox-input"
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        1
        item
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <ul
        class="g-transfer-list-content"
      >
        <li
          class="g-transfer-list-content-item"
        >
          <label
            class="g-checkbox-wrapper g-transfer-list-checkbox css-var-root g-checkbox-css-var"
          >
            <span
              class="g-checkbox g-wave-target"
            >
              <input
                class="g-checkbox-input"
                type="checkbox"
              />
            </span>
          </label>
          <span
            class="g-transfer-list-content-item-text"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    class="g-transfer-actions"
  >
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="right"
          class="gicon gicon-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      class="g-btn css-var-root g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm g-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        class="g-btn-icon"
      >
        <span
          aria-label="left"
          class="gicon gicon-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="g-transfer-section"
  >
    <div
      class="g-transfer-list-header"
    >
      <label
        class="g-checkbox-wrapper g-checkbox-wrapper-disabled g-transfer-list-checkbox css-var-root g-checkbox-css-var"
      >
        <span
          class="g-checkbox g-wave-target g-checkbox-disabled"
        >
          <input
            class="g-checkbox-input"
            disabled=""
            type="checkbox"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="gicon gicon-down g-dropdown-trigger"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="g-transfer-list-header-selected"
      >
        0
        item
      </span>
      <span
        class="g-transfer-list-header-title"
      />
    </div>
    <div
      class="g-transfer-list-body"
    >
      <div
        class="g-transfer-list-body-not-found"
      >
        <div
          class="css-var-root g-empty g-empty-normal g-empty-small"
        >
          <div
            class="g-empty-image"
          >
            <svg
              height="41"
              viewBox="0 0 64 41"
              width="64"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                No data
              </title>
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(0 1)"
              >
                <ellipse
                  cx="32"
                  cy="33"
                  fill="#f5f5f5"
                  rx="32"
                  ry="7"
                />
                <g
                  fill-rule="nonzero"
                  stroke="#d9d9d9"
                >
                  <path
                    d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                  />
                  <path
                    d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                    fill="#fafafa"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="g-empty-description"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
